Fix: Make sure the artifact has the right name and also ensure we properly load the right things and use recent webpack

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,7 +27,7 @@ jobs:
       - name: Upload site
         uses: actions/upload-artifact@v3
         with:
-          name: dist
+          name: github-pages
           path: build/dist
           if-no-files-found: error
           retention-days: 1
