--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,10 +3,12 @@ jetbrains-compose = "1.5.1"
 kotlin = "1.9.10"
 trixnity = "1.0.5"
 koin = "1.1.0"
+kobweb = "0.14.0"
 
 [libraries]
 trixnity-messenger = { module = "de.connect2x:trixnity-messenger", version.ref = "trixnity" }
 koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin" }
+kobweb-silk = { module = "com.varabyte.kobweb:kobweb-silk", version.ref = "kobweb" }
 
 [plugins]
 jetbrains-compose = { id = "org.jetbrains.compose", version.ref = "jetbrains-compose" }
