Fix: use correct github action

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,12 +24,10 @@ jobs:
       - name: Run export
         run: |
           ./gradlew jsBrowserProductionWebpack
-      - name: Upload site
-        uses: actions/upload-artifact@v3
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v2
         with:
-          name: github-pages
-          path: build/dist/js/productionExecutable
-          if-no-files-found: error
+          path: build/dist/js/productionExecutable/
           retention-days: 1
   # Deploy job
   deploy:
