Fix: Small login fixes and update

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,11 @@
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Dfile.encoding=UTF-8 -Xmx4g -XX:MaxMetaspaceSize=1g
+org.gradle.parallel=true
 kotlin.code.style=official
+kotlin.mpp.stability.nowarn=true
+kotlin.mpp.enableCInteropCommonization=true
+kotlin.mpp.enableHierarchicalCommonization=true
+# see https://github.com/JetBrains/kotlin/blob/master/kotlin-native/NEW_MM.md
+kotlin.native.binary.memoryModel=experimental
+# kotlin logging does not support the experminetal memory model yet
+kotlin.native.binary.freezing=disabled
 kotlin.version=1.9.10
