--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 jetbrains-compose = "1.5.2"
 kotlin = "1.9.10"
-trixnity = "1.0.6-SNAPSHOT"
+trixnity = "1.0.6"
 koin = "1.1.0"
 kobweb = "0.14.0"
 
