--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ kotlin.code.style=official
 kotlin.mpp.stability.nowarn=true
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.enableHierarchicalCommonization=true
-# see https://github.com/JetBrains/kotlin/blob/master/kotlin-native/NEW_MM.md
-kotlin.native.binary.memoryModel=experimental
-# kotlin logging does not support the experminetal memory model yet
-kotlin.native.binary.freezing=disabled
 kotlin.version=1.9.10
+org.jetbrains.compose.experimental.jscanvas.enabled=true
+kotlin.js.ir.output.granularity=whole-program
+compose.version=1.4.0
+compose.wasm.version=1.4.0-dev-wasm09
