--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
-jetbrains-compose = "1.5.2"
+jetbrains-compose-html = "1.5.2"
+jetbrains-compose = "1.4.0-dev-wasm09"
 kotlin = "1.9.10"
 trixnity = "1.0.6"
 koin = "1.1.0"
@@ -13,6 +14,7 @@ koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin" }
 kobweb-silk = { module = "com.varabyte.kobweb:kobweb-silk", version.ref = "kobweb" }
 decompose-extensions-compose-jetbrains = { module = "com.arkivanov.decompose:extensions-compose-jetbrains", version.ref = "decompose" }
 decompose = { module = "com.arkivanov.decompose:decompose", version.ref = "decompose" }
+compose-html = { module = "org.jetbrains.compose.html:html-core", version.ref = "jetbrains-compose-html" }
 
 [plugins]
 jetbrains-compose = { id = "org.jetbrains.compose", version.ref = "jetbrains-compose" }
